--- a/public/projects.json
+++ b/public/projects.json
@@ -1,32 +1,20 @@
 [
   {
     "id": 1,
-    "title": "Personal Portfolio Website",
-    "description": "A responsive portfolio website showcasing my skills, projects, and contact information. Built with React, Tailwind CSS, and hosted on Netlify.",
-    "img": "https://example.com/portfolio-img1.jpg",
-    "img1": "https://example.com/portfolio-img2.jpg",
-    "img2": "https://example.com/portfolio-img3.jpg",
-    "img3": "https://example.com/portfolio-img4.jpg"
+    "title": "Dice Roller App ",
+    "description": "A simple mobile app that simulates rolling a dice, displaying a random dice side when a button is pressed.",
+    "img": "https://i.ibb.co.com/1MxSScD/Whats-App-Image-2024-12-07-at-12-00-22-PM-2.jpg"
   },
   {
     "id": 2,
-    "title": "E-commerce Landing Page",
-    "description": "A modern landing page for an e-commerce website. Designed using HTML, CSS, and JavaScript with a focus on clean UI and optimized user experience.",
-    "img": "https://example.com/ecommerce-img1.jpg",
-    "img1": "https://example.com/ecommerce-img2.jpg",
-    "img2": "https://example.com/ecommerce-img3.jpg",
-    "img3": "https://example.com/ecommerce-img4.jpg",
-    "img4": "https://example.com/ecommerce-img5.jpg"
+    "title": "UniGuide ",
+    "description": "An app designed to help students select suitable universities, currently focused on universities in Bangladesh.",
+    "img": "https://i.ibb.co.com/p0wvKbT/7872e67f-a32b-4993-b367-0b7703b1a749.jpg"
   },
   {
     "id": 3,
-    "title": "Blog Web Application",
-    "description": "A blog platform where users can view, create, and manage posts. Developed using React and Bootstrap with JSON-based mock backend.",
-    "img": "https://example.com/blog-img1.jpg",
-    "img1": "https://example.com/blog-img2.jpg",
-    "img2": "https://example.com/blog-img3.jpg",
-    "img3": "https://example.com/blog-img4.jpg",
-    "img4": "https://example.com/blog-img5.jpg",
-    "img5": "https://example.com/blog-img6.jpg"
+    "title": "Inventory Management System",
+    "description": "A C# application for managing store inventories, supporting CRUD operations for tracking products efficiently.",
+    "img": "https://i.ibb.co.com/DYFL8L7/e4d8ea0a-6068-48b1-888e-3e464ab44169.jpg"
   }
 ]
